[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/img/fixed/rock_block.png" type="Texture" id=1]
[ext_resource path="res://scenes/RockBlock.gd" type="Script" id=2]
[ext_resource path="res://assets/img/fixed/rock_block_broke.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1
rough = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 80, 98 )

[sub_resource type="Animation" id=3]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("Collision:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 150 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "wrong"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="RockBlock" type="RigidBody2D"]
input_pickable = true
mass = 2.0
physics_material_override = SubResource( 1 )
can_sleep = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[node name="Rock" type="Sprite" parent="Collision"]
texture = ExtResource( 1 )

[node name="Art" type="Sprite" parent="Collision"]
scale = Vector2( 0.8, 0.8 )

[node name="Audio" type="AudioStreamPlayer" parent="."]

[node name="AudioKnock" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 3 )
anims/wrong = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_RockBlock_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_RockBlock_body_shape_entered"]
[connection signal="input_event" from="." to="." method="_on_RockBlock_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
